--- a/src/CSAuto/Windows/GUIWindow.xaml
+++ b/src/CSAuto/Windows/GUIWindow.xaml
@@ -74,7 +74,7 @@
                                 <CheckBox Content="{x:Static p:Strings.menu_autoclosecsauto}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCloseCSAuto}"/>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{x:Static p:Strings.title_color}" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    <ComboBox x:Name="ColorsComboBox" ItemsSource="{Binding Source={x:Static properties:Settings.Default},Path=availableColors}" SelectedItem="{Binding Source={x:Static properties:Settings.Default},Path=currentColor, Mode=OneTime, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ColorsComboBox_SelectionChanged"/>
+                                    <ComboBox x:Name="ColorsComboBox" SelectionChanged="ColorsComboBox_SelectionChanged"/>
                                 </StackPanel>
                                 <CheckBox Content="{x:Static p:Strings.menu_autocheckforupdates}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
                                 <CheckBox Content="{x:Static p:Strings.ckbox_oldscreencapture}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=oldScreenCaptureWay}"/>
