fix(windows11): fixed rounded corners bug in windows 11 fix(focus_on_cs): focusing on cs window only if it is not foreground

--- a/src/CSAuto/Windows/DebugInfo.xaml
+++ b/src/CSAuto/Windows/DebugInfo.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         TitleCharacterCasing="Normal"
         Title="CSAuto Debug Info"
+        StateChanged="MetroWindow_StateChanged"
         Height="450" Width="800">
     <Grid>
         <TextBox x:Name="TextBlock" IsReadOnly="True"/>
