--- a/src/CSAuto/Windows/GUIWindow.xaml
+++ b/src/CSAuto/Windows/GUIWindow.xaml
@@ -19,6 +19,7 @@
         WindowTitleBrush="Black"
         GlowBrush="Transparent"
         NonActiveGlowBrush="Transparent"
+        StateChanged="MetroWindow_StateChanged"
         TitleCharacterCasing="Normal">
     <mahapps:MetroWindow.TitleTemplate>
         <DataTemplate>
@@ -64,7 +65,7 @@
                         <mahapps:MetroTabItem Padding="5,0,5,0">
                             <TabItem.HeaderTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{x:Static p:Strings.menu_general}" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" />    
+                                    <TextBlock Text="{x:Static p:Strings.menu_general}" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
                                 </DataTemplate>
                             </TabItem.HeaderTemplate>
                             <StackPanel Orientation="Vertical" Margin="5.5,6,0,0">
@@ -93,8 +94,6 @@
                             </TabItem.HeaderTemplate>
                             <StackPanel Orientation="Vertical" Margin="5.5,6,0,0">
                                 <CheckBox Content="{x:Static p:Strings.menu_mobileappenabled}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=mobileAppEnabled}"/>
-                                <!--<TextBlock Text="{x:Static p:Strings.inputtitle_mobileip}" FontSize="20" FontWeight="Bold"/>
-                                <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=phoneIpAddress}"/>-->
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{x:Static p:Strings.inputtitle_telegramid}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left"/>
                                     <Button Content="{x:Static p:Strings.inputtext_botlinkbutton}" Click="BotButton_Click" Margin="20,0,0,0"/>
@@ -112,14 +111,6 @@
                                 <CheckBox Content="{x:Static p:Strings.menu_bombnotification}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=bombNotification}"/>
                             </StackPanel>
                         </mahapps:MetroTabItem>
-                        <!--<mahapps:MetroTabItem Header="menu_discord">
-                            <StackPanel Orientation="Vertical">
-                                <CheckBox Content="menu_discordrpc" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=enableDiscordRPC}"/>
-                                <CheckBox Content="menu_lobbycount" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=enableLobbyCount}"/>
-                                <TextBlock Text="inputtitle_steamkey" FontSize="20" FontWeight="Bold"/>
-                                <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=steamAPIkey}"/>
-                            </StackPanel>
-                        </mahapps:MetroTabItem>-->
                         <mahapps:MetroTabItem Padding="5,0,5,0">
                             <TabItem.HeaderTemplate>
                                 <DataTemplate>
@@ -131,13 +122,6 @@
                                 <CheckBox Content="{x:Static p:Strings.menu_autospotify}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoPausePlaySpotify}"/>
                                 <CheckBox Content="{x:Static p:Strings.menu_autofocus}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoFocusOnCS}"/>
                                 <CheckBox Content="{x:Static p:Strings.menu_focusback}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=focusBackOnOriginalWindow}"/>
-                                <!--<TextBlock Text="menu_autobuy" FontSize="20" FontWeight="Bold"/>
-                                -->
-                                <!-- <CheckBox Content="menu_oldautobuy" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=oldAutoBuy}"/>-->
-                                <!--
-                                <CheckBox Content="menu_preferarmor" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=preferArmor}"/>
-                                <CheckBox Content="menu_autobuyarmor" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoBuyArmor}"/>
-                                <CheckBox Content="menu_autobuydefuse" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoBuyDefuseKit}"/>-->
                                 <TextBlock Text="{x:Static p:Strings.menu_autoreload}" FontSize="20" FontWeight="Bold"/>
                                 <CheckBox Content="{x:Static p:Strings.menu_enabled}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoReload}"/>
                                 <CheckBox Content="{x:Static p:Strings.menu_continuespray}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=ContinueSpraying}"/>
@@ -225,10 +209,6 @@
                                         <ComboBoxItem Content="CSGOStats"/>
                                     </ComboBox>
                                 </StackPanel>
-                                <!--<TextBlock Text="Example urls:"/>
-                                <TextBlock  Text="Steam: 'https://steamcommunity.com/profiles/{SteamID}'"/>
-                                <TextBlock  Text="CSGOStats: 'https://csgostats.gg/player/{SteamID}'"/>
-                                <TextBlock  Text="Faceit: 'https://faceitfinder.com/profile/{SteamID}'" Margin="0,0,0,15"/>-->
                             </StackPanel>
                         </mahapps:MetroTabItem>
                     </TabControl>
@@ -341,8 +321,7 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <mahapps:DropDownButton Name="ChangeLogAlternatives"
-            Content="{x:Static p:Strings.menu_alternativelocations}">
+                    <mahapps:DropDownButton Name="ChangeLogAlternatives" Content="{x:Static p:Strings.menu_alternativelocations}">
                         <mahapps:DropDownButton.Items>
                             <TextBlock Text="GitHub" MouseDown="OpenGithubChangelog_MouseDown"/>
                             <TextBlock Text="{x:Static p:Strings.menu_website}" MouseDown="OpenWebSite_MouseDown"/>
@@ -440,19 +419,15 @@
                             <MenuItem Header="Debug _info" Click="DebugInfo_Click"/>
                         </Menu>
                     </DockPanel>
-                    <!--<TextBlock x:Name="IsPortableText" Text="Portable: {}" Grid.Row="1" Grid.Column="2"  VerticalAlignment="Bottom" Margin="0,0,0,30"/>-->
                     <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
                     <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto"/>
                     <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" TextChanged="debugBox_TextChanged" Loaded="debugBox_Loaded"/>
-                    <!--<TextBlock Text="CS Console Output:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/> -->
-                    <!--<TextBlock Text="{Binding Source={x:Static csauto:DiscordRPCButtonSerializer.Path}}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="0,0,0,15" TextWrapping="WrapWithOverflow"/>-->
-                    <!--<TextBlock Text="" x:Name="OldCaptureText" Grid.Row="1" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,15"/>-->
-                    <!--<TextBlock x:Name="DebugButtonColor" Text="Active: {color}, Regular: {color}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom"/>-->
                     <TextBlock x:Name="DebugPixelColor" Text="Pixel Color at (x,y): res" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
                     <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,15,0"/>
-                    <Image Grid.Row="2" Grid.RowSpan="1" Grid.Column="2" x:Name="latestCapturedFrame"/>
+                    <Border Grid.Row="2" Grid.RowSpan="1" Grid.Column="2" BorderBrush="#FFABADB3" BorderThickness="1">
+                        <Image x:Name="latestCapturedFrame"/>
+                    </Border>
                     <TextBox x:Name="csConsoleOutput" IsReadOnly="True" Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" VerticalScrollBarVisibility="Auto" Visibility="Hidden"/>
-                    <!--<TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,30"/>-->
                 </Grid>
             </mahapps:MetroTabItem>
             <mahapps:MetroTabItem>
@@ -466,7 +441,7 @@
                                             <ScaleTransform/>
                                             <SkewTransform/>
                                             <RotateTransform/>
-                                            <TranslateTransform X="-2.5"/>
+                                            <TranslateTransform X="-3.5"/>
                                         </TransformGroup>
                                     </Path.RenderTransform>
                                 </Path>
@@ -481,14 +456,13 @@
                             <Image Width="64" Height="64" Source="/Images/App_Icon.png"/>
                             <TextBlock Text="CSAuto" FontSize="48" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" TextAlignment="Center" TextWrapping="WrapWithOverflow"/>
                             <TextBlock Text="{x:Static p:Strings.text_description}" Foreground="White" HorizontalAlignment="Center" TextAlignment="Center" FontSize="24" TextWrapping="WrapWithOverflow"/>
-                            <TextBlock Text="" Foreground="White" HorizontalAlignment="Center" FontSize="20" TextAlignment="Center" TextWrapping="WrapWithOverflow">
-                                <Hyperlink Foreground="White" Click="AboutLicense_Click">Copyright (c) 2023, Murky</Hyperlink>
+                            <TextBlock HorizontalAlignment="Center" FontSize="20" TextAlignment="Center" TextWrapping="WrapWithOverflow">
+                                <Hyperlink Click="AboutLicense_Click">Copyright (c) 2023, Murky</Hyperlink>
                             </TextBlock>
                         </StackPanel>
                     </Border>
                 </Grid>
             </mahapps:MetroTabItem>
         </TabControl>
-        <!--<TextBlock x:Name="VersionText" Text="ver smthn" VerticalAlignment="Bottom" HorizontalAlignment="Left" Foreground="Gray"/>-->
     </Grid>
 </mahapps:MetroWindow>
