--- a/src/CSAuto/Windows/GUIWindow.xaml
+++ b/src/CSAuto/Windows/GUIWindow.xaml
@@ -420,7 +420,7 @@
                     </DockPanel>
                     <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
                     <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto"/>
-                    <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" TextChanged="debugBox_TextChanged" Loaded="debugBox_Loaded"/>
+                    <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" TextChanged="DebugBox_TextChanged" Loaded="DebugBox_Loaded"/>
                     <TextBlock x:Name="DebugPixelColor" Text="Pixel Color at (x,y): res" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
                     <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,15,0"/>
                     <Border Grid.Row="2" Grid.RowSpan="1" Grid.Column="2" BorderBrush="#FFABADB3" BorderThickness="1">
